--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ExtremeSportEquipment</title>
+    <title>Sneakers</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -12,13 +12,13 @@
     <header>
         <div class="header__container">
             <div class="header__nav">
-                <h1>My Store</h1>
-                <a href="#">My Equipment</a>
-                <a href="#">Create Equipment</a>
+                <h1>Store</h1>
+                <a href="index.html">My Sneakers</a>
+                <a href="create.html">Create Sneakers</a>
             </div>
 
             <form class="header__not_nav">
-                <input type="text" placeholder="Type something..." class="header__input" id="input__search">
+                <input type="text" placeholder="Enter" class="header__input" id="input__search">
                 <button type="submit" class="button__search" id="button__search">
                     Search
                 </button>
@@ -32,10 +32,10 @@
     </header>
 
     <aside>
-        <h2>Manage Equipment</h2>
+        <h2>Manage Snekers</h2>
 
         <div class="aside__sort-container">
-            <h3>Sort by the most expensive equipment</h3>
+            <h3>Sort by the most expensive sneakers</h3>
             <button class="button-sort" id="button-sort">
                 <div class="button-sort__circle" id="button-sort__circle"></div>
             </button>
@@ -53,21 +53,7 @@
     </aside>
 
     <main class="main__container" id="main__container">
-        <div class="main__equipment" id="${id}">
-            <img src=1 .png>
-            <span class="main__equipment-header">${header}</span>
-            <div class="main__equipment-description-text">${descriptionText}</div>
 
-            <div class="main__equipment-price">
-                <h3>Price:</h3>
-                <h3>${price}$</h3>
-            </div>
-            <div class="main__equipment-buttons-container">
-                <button class="main__equipment-edit-button">Edit</button>
-                <button class="main__equipment-remove-button">Remove</button>
-            </div>
-
-        </div>
     </main>
 
     <script type='module' src="./js/main.js"></script>
